# headless-ida-multi

./: .gitignore  README.md  pyproject.toml  run_headless_ida.py
.github/workflows/: pypi.yml
examples/: decompile_main_multibins.py
src/headless_ida/: client.py  helpers.py  ida_script_keep_db.py  server.py
src/headless_ida_multi/: __init__.py  cli.py  ida_script.py
tests/: test_helpers.py  test_idb_path.py  test_remote.py  test_zipped_idb.py
tests/testbin/: foo  hello_world
